
2007-06-20  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Stop gettextizing local progress and error
	messages.

	* Makefile: Include only the relevant files into the pot file.

2007-06-18  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/data.py, lib/editor.py, lib/htmlpage.py,
	lib/localweb.py, lib/po.py, lib/registry.py, lib/run.py,
	lib/sgml.py, lib/unpack.py, bin/po-tidy-links, web/html-to-cgi,
	web/to-html, web/registry.cgi.in:
	Make the line with "mode:" and "coding:" uniform.

	* Makefile: Exclude shell scripts and Makefile from globbing.

	* (Just about all files): Recode from ISO-8859-1 to UTF-8.

	* bin/po-register: Calculate the statistics as soon as a POT
	file is registered.

	* bin/po-register: Just break when moving the file fails: don't
	continue, don't send out mails.  Calculate the statistics before
	sending mails.  Tweak some messages.

	* lib/localweb.py, lib/po.py, lib/registry.py, lib/sgml.py,
	lib/run.py: Stop gettexttizing the local error messages: the TP
	programs aren't meant to be distributed to hundreds of users.

2007-06-17  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Don't use 'calc-postats' to put an entry
	into the statistics database, but plug it in directly.

	* bin/po-register: Ehm... no.  Forget about plugging it in
	directly -- it's too complicated.

	* bin/po-register: Wrap overlong lines, tweak the texts,
	adjust some whitespace.

	* doc/robot.all, doc/translators.all: Write "robot" with
	initial lower case.

	* lib/config.py, lib/data.py, lib/po.py, lib/registry.py,
	lib/run.py, lib/sgml.py, lib/unpack.py:
	Whitespace and comment tweaks, deletion of unused code.

	* lib/textwrap.py: Delete this module as it comes with Python.

2007-06-16  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: Docstring tweaks.

	* bin/calc-postats: Ignore the paths in any given argument,
	as the files must be in the archives, otherwise calculating
	the statistics makes no sense.
